# axum-auth

./: next.config.js  package-lock.json  package.json
backend/: Cargo.toml  Secrets.toml  Shuttle.toml
backend/migrations/: 20230820152535_schema.sql
backend/src/: main.rs  router.rs
